--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -1,5 +1,17 @@
 body {
-    color: blue;
-    text-align: center;
+    color: #333  ;
+    text-align: left;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#container {
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1 {
+    text-size-adjust: 70px;
 }
