--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -1,7 +1,11 @@
 body {
-    color: red  ;
+    color: black  ;
     text-align: left;
     font-family: 'Courier New', Courier, monospace;
+}
+
+#post h1 {
+    text-align: center;
 }
 
 #container {
@@ -18,9 +22,10 @@ body {
 
 #header 
 {
-    background: #33A;
-    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5)
-    color white;
+    background: rgb(12, 12, 77);
+    text-align: center;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
